--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     grid-template-columns: repeat(4, 1fr); /* 3 equal columns */
     gap: 0; /* No space between items */
     height: 100vh; /* Take full viewport height */
+    width: 100vw;
 }
 .tit{
     grid-column: span 2;
