--- a/younes.html
+++ b/younes.html
@@ -8,12 +8,7 @@
     <script src="test.js"></script>
 </head>
 <header>
-    <h1 class="main">HIRAGANA</h1>
-    <div class="links">
-        <a href="index.html">HOME</a>
-        <br></br>
-        <h1>A sir t9oud</h1>
-    </div>
+    <h1 class="main" href="index.html">HIRAGANA</h1>
 </header>
 <body>
 </body>
