--- a/checkbox.html
+++ b/checkbox.html
@@ -8,10 +8,7 @@
     <script src="test.js"></script>
 </head>
 <header>
-    <h1 class="main">HIRAGANA</h1>
-    <div class="links">
-        <a href="index.html">HOME</a>
-    </div>
+    <h1 class="main" href="index.html">HIRAGANA</h1>
 </header>
 <body>
     <div class="bodyMain">
