working no home

--- a/random.html
+++ b/random.html
@@ -9,7 +9,7 @@
     <script src="test2.js"></script>
 </head>
 <header>
-    <h1 class="main" href="index.html">HIRAGANA</h1>
+    <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
 </header>
 <body>
     <div class="bodyMain">
