--- a/sth.html
+++ b/sth.html
@@ -8,7 +8,7 @@
     <script src="test.js"></script>
 </head>
 <header>
-    <h1 class="main" href="index.html">HIRAGANA</h1>
+    <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
 </header>
 <body>
     <div class="bodyMain">
