--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="grids.css">
     <script src="test.js"></script>
 </head>
 <body>
@@ -18,43 +19,17 @@
     </div>
 </body>
 <style>
-    body{
-    margin: 0px;
-}
-
-.grids {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 3 equal columns */
-    gap: 0; /* No space between items */
-    height: 100vh; /* Take full viewport height */
-    width: 100vw;
-}
-.tit{
-    grid-column: span 2;
-}
-.grids > * {
-    border: 2px solid #313a5c;
-    color: white;
-    text-align: center;
-    line-height: 1.5;
-    display: flex;
-    justify-content: center;
-    align-items: center; /* Center text in the grid item */
-    text-decoration: none; /* Remove underline */
-    font-size: 200%;
-}
-.grids > *:hover{
-    background-color: #131b3f;
-}
-
-.grids > *:last-child:nth-child(4n - 0) {
-    grid-column: span 4;
-}
-.grids > *:last-child:nth-child(4n - 3) {
-  grid-column: span 3;
-}
-.grids > *:last-child:nth-child(4n - 2) {
-  grid-column: span 2;
-}
+    .grids > *:last-child:nth-child(4n - 0) {
+        grid-column: span 4;
+    }
+    .grids > *:last-child:nth-child(4n - 3) {
+        grid-column: span 3;
+    }
+    .grids > *:last-child:nth-child(4n - 2) {
+        grid-column: span 2;
+    }
+    .tit{
+        grid-column: span 2;
+    }
 </style>
 </html>
