--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="grids.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="test.js"></script>
 </head>
 <body>
@@ -19,17 +21,15 @@
     </div>
 </body>
 <style>
-    .grids > *:last-child:nth-child(4n - 0) {
-        grid-column: span 4;
-    }
-    .grids > *:last-child:nth-child(4n - 3) {
-        grid-column: span 3;
-    }
-    .grids > *:last-child:nth-child(4n - 2) {
-        grid-column: span 2;
+    .grids {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); 
+        height: 100vh;
+        width: 100vw;
+        align-items: center; 
     }
     .tit{
-        grid-column: span 2;
+        font-size: 40px;
     }
 </style>
 </html>
