--- a/random.html
+++ b/random.html
@@ -6,14 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
     <script src="test.js"></script>
-    <script src="test2.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <header>
     <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
 </header>
 <body>
     <div class="bodyMain">
-        <h1 id="hiraganaT"></h1>
+        <h1 id="hiraganaT" class="hide"></h1>
         <br></br>
         <button onclick="hiraganaRandom2()">RANDOM</button>
     </div>
