--- a/sth.html
+++ b/sth.html
@@ -5,29 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="grids.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="test.js"></script>
 </head>
 <body>
     <div class="grids">
         <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
         <input type="text" id="soundInput">
-        <h1 id="hiraganaEqui">your hiragana</h1>
+        <h1 id="hiraganaEqui">---------</h1>
         <button onclick="soundToHiragana()">show hiragana</button>
     </div>
 </body>
 <style>
-    .grids > *:last-child:nth-child(4n-2) {
-        grid-column: span 1;
-    }
-    .grids > *:last-child:nth-child(4n - 1) {
-        grid-column: span 4;
-    }
-    .grids > *:last-child:nth-child(4n) {
-        grid-column: span 3;
-    }
-    .main{
-        grid-column: span 3;
+    #hiraganaEqui{
+        font-size: 1000%;
     }
 </style>
 </html>
