--- a/random.html
+++ b/random.html
@@ -15,7 +15,7 @@
 </header>
 <body>
     <div class="bodyMain">
-        <h1 id="hiraganaT" class="hide"></h1>
+        <h1 id="hiraganaT"></h1>
         <br></br>
         <button onclick="hiraganaRandom2()">RANDOM</button>
     </div>
