--- a/wordRandom.html
+++ b/wordRandom.html
@@ -15,7 +15,7 @@
 </header>
 <body>
     <div class="bodyMain">
-        <h1 id="Answer"></h1>
+        <h1 id="Answer" class="hide"></h1>
         <h1 id="hiraganaTest"></h1>
         <button onclick="randomWord()">Roll</button>
     </div>
