--- a/hiragana.html
+++ b/hiragana.html
@@ -12,9 +12,12 @@
 </head>
 <body>
     <div class="grids">
-        <a href="#" class="tit">JAPANESE</a>
-        <a href="hiragana.html">HIRAGANA</a>
-        <a href="kanji.html">KANJI</a>
+        <a href="index.html" class="tit">HIRAGANA</a>
+        <a href="sth.html">SOUND TO HIRAGANA</a>
+        <a href="checkbox.html">HIRAGANA TEST</a>
+        <a href="random.html">RANDOM HIRAGANA</a>
+        <a href="wordRandom.html">RANDOM WORD</a>
+        <a href="younes.html">NEW NEW NEW</a>
     </div>
 </body>
 <style>
