--- a/sth.html
+++ b/sth.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="grids">
-        <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
+        <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
         <input type="text" id="soundInput">
         <h1 id="hiraganaEqui">---------</h1>
         <button onclick="soundToHiragana()">show hiragana</button>
