--- a/wordRandom.html
+++ b/wordRandom.html
@@ -11,7 +11,7 @@
     <script src="word.js"></script>
 </head>
 <header>
-    <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
+    <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
 </header>
 <body>
     <div class="bodyMain">
