--- a/randomKanji.html
+++ b/randomKanji.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <script src="test.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <script src="kanjiRand.js"></script>
 </head>
 <header>
-    <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
+    <h1 class="main" onclick='window.location.href = "kanji.html"'>KANJI</h1>
 </header>
 <body>
     <div class="bodyMain">
-        <h1 id="hiraganaT"></h1>
-        <br></br>
-        <button onclick="hiraganaRandom2()">RANDOM</button>
+        <h1 id="Answer" class="hide"></h1>
+        <h1 id="hiraganaTest"></h1>
+        <button onclick="randomWord()">Roll</button>
     </div>
-    
 </body>
 </html>
