--- a/younes.html
+++ b/younes.html
@@ -11,7 +11,7 @@
     <script src="test.js"></script>
 </head>
 <header>
-    <h1 class="main" onclick='window.location.href = "index.html"'>HIRAGANA</h1>
+    <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
     <a href="https://tinyurl.com/2ev3r8x4">clique ici</a>
 </header>
 <body>
