new hiragana table(beta)

--- a/hiragana.html
+++ b/hiragana.html
@@ -17,7 +17,7 @@
         <a href="checkbox.html">HIRAGANA TEST</a>
         <a href="random.html">RANDOM HIRAGANA</a>
         <a href="wordRandom.html">RANDOM WORD</a>
-        <a href="younes.html">NEW NEW NEW</a>
+        <a href="hiraganatable.html">HIRAGANA TABLE <p style="color: red;">new! new! new! new! new! new! new! new! new!</p></a>
     </div>
 </body>
 <style>
