Updated files and renamed a file

--- a/hiragana/index.html
+++ b/hiragana/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="grids">
-        <a href="../mainhub.html" class="tit">JAPANESE</a>
+        <a href="../index.html" class="tit">JAPANESE</a>
         <a href="hiragana.html">HIRAGANA</a>
         <a href="kanji.html">KANJI</a>
     </div>
