--- a/impostor/index.html
+++ b/impostor/index.html
@@ -99,7 +99,7 @@
   </style>
 </head>
 <body>
-  <h1>Word Impostor<a href="../mainhub.html">!</a></h1>
+  <h1>Word Impostor<a href="../index.html">!</a></h1>
 
   <div class="card" id="menu">
     <input id="playerName" placeholder="Your name" />
