--- a/impostor/game.html
+++ b/impostor/game.html
@@ -5,14 +5,15 @@
   <title>Word Impostor Game</title>
   <style>
     body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: repeating-linear-gradient(
+      background: repeating-linear-gradient(
     45deg,
     #f9f9f9,
     #f9f9f9 20px,
     #f0f0f0 20px,
     #f0f0f0 40px
   );
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
   background-attachment: fixed; /* Prevent background from shifting */
   color: #333;
   text-align: center;
@@ -54,7 +55,7 @@ h1 {
   </style>
 </head>
 <body>
-  <h1>Your Word Is</h1>
+  <h1 id="title">Your Word Is</h1>
 
   <div class="card" onclick="revealWord()">
     <h1 id="cardWord"></h1>
