--- a/impostor/game.html
+++ b/impostor/game.html
@@ -60,6 +60,7 @@ h1 {
   <div class="card" onclick="revealWord()">
     <h1 id="cardWord"></h1>
   </div>
+  <h2 id="orderText">gfn</h2>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
