--- a/impostor/game.html
+++ b/impostor/game.html
@@ -66,5 +66,7 @@ h1 {
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="gameLogic.js"></script>
+
+  <button onclick="deletef()"></button>
 </body>
 </html>
