--- a/impostor/game.html
+++ b/impostor/game.html
@@ -67,6 +67,6 @@ h1 {
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="gameLogic.js"></script>
 
-  <button onclick="deletef()"></button>
+  <button onclick="deletef()">quit</button>
 </body>
 </html>
