--- a/hiragana/checkbox.html
+++ b/hiragana/checkbox.html
@@ -13,7 +13,7 @@
 <header>
     <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
 </header>
-<body>
+<body><!--
     <div class="bodyMain">
         <div>
             <input type="checkbox" id="base" name="hiragana-base" value="base">
@@ -58,5 +58,7 @@
         <br></br>
         <button onclick="getCheckedCheckboxes()">START</button>
     </div>
+    -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
 </body>
 </html>
