--- a/hiragana/hiraganatable.html
+++ b/hiragana/hiraganatable.html
@@ -14,7 +14,10 @@
     <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
 </header>
 <body>
+    <!--
     <img src="table.png" alt="">
+    -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
 </body>
 <style>
     .main{
