--- a/hiragana/index.html
+++ b/hiragana/index.html
@@ -30,3 +30,5 @@
     }
 </style>
 </html>
+<!--POUR FIXER LE MESSI HITLER, SUPPRIMER LES GUILLMETS DES COMMENTAIRES PUIS SUPPRIMER IMAGE DE MESSI QUI A CE LIEN <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
+ET PUIS, POUR WORD IMPOSTROR FAIRE LA MEME-->
