--- a/hiragana/wordRandom.html
+++ b/hiragana/wordRandom.html
@@ -14,10 +14,14 @@
     <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
 </header>
 <body>
+    <!--
     <div class="bodyMain">
         <h1 id="Answer" class="hide"></h1>
         <h1 id="hiraganaTest"></h1>
         <button onclick="randomWord()">Roll</button>
     </div>
+-->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
+
 </body>
 </html>
