--- a/hiragana/random.html
+++ b/hiragana/random.html
@@ -14,11 +14,14 @@
     <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
 </header>
 <body>
+    <!--
     <div class="bodyMain">
         <h1 id="hiraganaT"></h1>
         <br></br>
         <button onclick="hiraganaRandom2()">RANDOM</button>
     </div>
-    
+-->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
+
 </body>
 </html>
