--- a/hiragana/sth.html
+++ b/hiragana/sth.html
@@ -10,13 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="test.js"></script>
 </head>
-<body>
+<body><!--
     <div class="grids">
         <h1 class="main" onclick='window.location.href = "hiragana.html"'>HIRAGANA</h1>
         <input type="text" id="soundInput">
         <h1 id="hiraganaEqui">---------</h1>
         <button onclick="soundToHiragana()">show hiragana</button>
     </div>
+-->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6o_vDB5DjQsxX7vbiuxtxGTborn0sGOlsag&s" alt="">
 </body>
 <style>
     #hiraganaEqui{
